Alterações básicas, removendo classe de botão, alterando visualmente a estilização do footer e cabeçalho

--- a/CSS/style.css
+++ b/CSS/style.css
@@ -32,7 +32,6 @@ main {
 
 
 header, footer {
-    background-color: #ffffffcc;
     backdrop-filter: blur(10px);
     box-shadow: 0 2px 6px rgba(0, 0, 0, 0.1);
     padding: 1rem 2rem;
@@ -43,8 +42,9 @@ header, footer {
 
 footer {
     border-top: 1px solid #e0e0e0;
-    box-shadow: 0 -2px 6px rgba(0, 0, 0, 0.05);
+    box-shadow: 0 -2px 6px rgba(24, 1, 1, 0.05);
     margin-top: auto; 
+    background-color: #c5c1b0;
 }
 
 /* Botões */
